Allow user-entered data to override the SRU index for given searches

By adding a custom query such as x-tellico-isbn, the user can override
the index of the SRU query. Additionally, switch the query operator to
use 'adj' instead of '=' for versions other than 1.1.

Also allow for x-tellico-title to override the title index.

BUG: 488931
FIXED-IN: 3.5.5